# better-mebis

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  manifest.json
background-script/: Cargo.toml  starter.js
background-script/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
content-scripts/idp-theming/: Cargo.toml  starter.js
content-scripts/idp-theming/src/: lib.rs
firefox/: update-manifest.json
idp-theming/: script.js
login-theming/: style.css
main/: better-nav-tabs.css  compact-activities.css  consistent-button-height.css  consistent-filter-buttons.css  dark-scrollbar.css  script.js  style.css  unobtrusive-borders.css
