[package]
name = "background-script"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }

wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.60"
web-extensions-sys = "0.3.0"
gloo-console = "0.2.3"

console_error_panic_hook = "0.1.7"
