[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
content_script = ["dep:serde-wasm-bindgen", "dep:web-extensions-sys"]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = {version="0.4.3", optional=true}

web-extensions-sys = { version = "0.3.0", optional = true }
