[package]
name = "idp-theming"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"

wasm-bindgen = "0.2.83"
web-extensions-sys = "0.3.0"
web-sys = { version = "0.3.60", features = ["DomTokenList", "Element", "console"] }
js-sys = "0.3.60"
