[package]
name = "idp-theming"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../../common", features = ["content_script"] }

wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.4.3"
wasm-bindgen-futures = "0.4.33"

js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["Window", "Document", "Element", "HtmlElement", "NodeList", "DomTokenList"] }
web-extensions-sys = "0.3.0"

console_error_panic_hook = "0.1.7"
